erDiagram
    Users ||--o{ Orders : has
    Orders ||--o{ Tickets : has
    Users ||--o{ Certificate : obtains
    Sub_events ||--o{ Certificate : belongs_to
    Users ||--o{ Submission : makes
    Events ||--o{ Submission : belongs_to
    Sub_events ||--|{ Submission : optionally_belongs_to
    Events ||--|{ Sub_events : has
    Sub_events ||--o{ Addresses : has

    Users {
        int id PK
        varchar name
        varchar email
        varchar ra
        varchar password
        varchar phone
        varchar type
        varchar permission
    }

    Orders {
        int id PK
        int user_id FK
        int ticket_id FK
        decimal total_value
        varchar payment_method
        varchar status_payment
        datetime payment_at
        varchar code
    }

    Tickets {
        int id PK
        int order_id FK
        int sub_event_id FK 
        varchar status
        varchar codigoingresso
        datetime created_at
    }

    Certificate {
        int id PK
        int user_id FK
        int sub_event_id FK
        datetime created_at
        uuid verification_code
    }

    Submission {
        int submission_id PK
        int user_id FK
        int sub_event_id FK
        varchar workTitle
        text description
        blob archive
        datetime dataSubmission
        varchar status
    }

    Events {
        int id PK
        varchar name
        text description
        datetime start_date
        datetime end_date
    }

    Sub_events {
        int id PK
        varchar name
        text description
        datetime start_date
        datetime end_date
        int event_id FK
        decimal value
        int quantity
    }

    Addresses {
        int id PK
        int sub_event_id FK
        varchar block
        varchar room
    }